--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1>Sedans</h1>
   <p> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
 
-  <button>Learn More</button>
+  <button class="margin-top">Learn More</button>
 </section>
 
 <section id="suvs_block" class="son">
@@ -27,7 +27,7 @@
   <h1>SUVs</h1>
   <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
 
-  <button>Learn More</button>
+  <button class="margin-top" class="margin-top">Learn More</button>
 
 </section>
 
@@ -38,7 +38,7 @@
  <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
   rental and arrive in style.</p> 
 
-  <button>Learn More</button>
+  <button class="margin-top" class="margin-top">Learn More</button>
   
 </section>
 </article>
