--- a/index.html
+++ b/index.html
@@ -12,36 +12,36 @@
 
 </head>
 <body class="parent">
-  <article class="blocks">
-  <section id="sedans_block" class="son">
-  <img src="assets/img/icon-sedans.svg" alt="">
-  <h1>Sedans</h1>
-  <p> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+  <article class="blocks" role="divisor_of_sections">
+    <section id="sedans_block" class="son">
+    <img src="assets/img/icon-sedans.svg" alt="">
+    <h2>Sedans</h2>
+    <p> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
 
-  <button>Learn More</button>
-</section>
+    <button>Learn More</button>
+    </section>
 
-<section id="suvs_block" class="son">
+    <section id="suvs_block" class="son">
 
-  <img src="assets/img/icon-suvs.svg" alt="">
-  <h1>SUVs</h1>
-  <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+      <img src="assets/img/icon-suvs.svg" alt="">
+      <h2>SUVs</h2>
+      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
 
-  <button>Learn More</button>
+      <button>Learn More</button>
 
-</section>
+    </section>
 
-<section id="luxury_block" class="son">
+    <section id="luxury_block" class="son">
 
-  <img src="assets/img/icon-luxury.svg" alt="">
-  <h1>Luxury</h1>
- <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.</p> 
+      <img src="assets/img/icon-luxury.svg" alt="">
+      <h2>Luxury</h2>
+    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+      rental and arrive in style.</p> 
 
-  <button>Learn More</button>
-  
-</section>
-</article>
+      <button>Learn More</button>
+      
+    </section>
+  </article>
   <footer class="attribution">
     Challenge by <a href="https://www.linkedin.com/in/andrea-bellver-garcia/" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Andrea Bellver García</a>.
