--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" role="main">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +12,8 @@
 
 </head>
 <body class="parent">
-  <article class="blocks" role="divisor_of_sections">
-    <section id="sedans_block" class="son">
+  <div class="blocks" role="structure">
+    <section id="sedans_block" class="son" role="region">
     <img src="assets/img/icon-sedans.svg" alt="">
     <h2>Sedans</h2>
     <p> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
@@ -21,7 +21,7 @@
     <button>Learn More</button>
     </section>
 
-    <section id="suvs_block" class="son">
+    <section id="suvs_block" class="son" role="region">
 
       <img src="assets/img/icon-suvs.svg" alt="">
       <h2>SUVs</h2>
@@ -31,7 +31,7 @@
 
     </section>
 
-    <section id="luxury_block" class="son">
+    <section id="luxury_block" class="son" role="region">
 
       <img src="assets/img/icon-luxury.svg" alt="">
       <h2>Luxury</h2>
@@ -41,7 +41,7 @@
       <button>Learn More</button>
       
     </section>
-  </article>
+  </div>
   <footer class="attribution">
     Challenge by <a href="https://www.linkedin.com/in/andrea-bellver-garcia/" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Andrea Bellver García</a>.
